@@ -9,7 +9,8 @@ static char *mainhelp[] = {
 
 "	?		help\n",
 "	q		quit\n",
-"	Q		quit and print selected item(s) to stderr\n",
+"	Q		quit without saving\n",
+"	P		quit and print selected item(s) to stderr\n",
 "	^L		refresh screen\n",
 "\n",
 "	arrows / j,k	scroll list\n",
